--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla-app-template",
+  "name": "goit-js-hw-10",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.5.2",
+    "vite": "^4.5.3",
     "glob": "^8.1.0"
   },
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
